fix broken css & js Code

--- a/css/index.css
+++ b/css/index.css
@@ -1315,7 +1315,7 @@ textarea {
     }
 
     .section {
-        padding: 2rem 1.5rem !important;
+        padding: 2rem 1.5rem 8rem !important;
     }
 
     .timeline {
